[gd_scene load_steps=4 format=3 uid="uid://clb64wa2em4es"]

[ext_resource type="Script" uid="uid://5qgoilfnkbc4" path="res://gui/enemy_stats_ui/enemy_stats_ui.gd" id="1_blvd2"]
[ext_resource type="Texture2D" uid="uid://cqmhm6h4lxpb" path="res://gui/enemy_stats_ui/tile_0102.png" id="1_vba5d"]
[ext_resource type="Texture2D" uid="uid://bh3s5gt5unu6e" path="res://gui/enemy_stats_ui/tile_0070.png" id="3_p31ho"]

[node name="EnemyStatsUI" type="VBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 8.0
offset_right = 20.0
offset_bottom = 16.0
grow_horizontal = 2
theme_override_constants/separation = 1
script = ExtResource("1_blvd2")

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HealthImage" type="TextureRect" parent="Health"]
layout_mode = 2
texture = ExtResource("1_vba5d")

[node name="HealthLabel" type="Label" parent="Health"]
layout_mode = 2
text = "5/10"

[node name="Attack" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="AttackImage" type="TextureRect" parent="Attack"]
layout_mode = 2
texture = ExtResource("3_p31ho")

[node name="AttackLabel" type="Label" parent="Attack"]
layout_mode = 2
text = "40"
